--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -56,7 +56,7 @@
 		$.ajax({
 			Type:"post",
 			url:"login_dby",
-			date:{
+			data:{
 				userPhone:$("#username").val(),
 				userPwd:$("#password").val()
 			},
