--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<link rel="stylesheet" type="text/css"
-	href="easyui/themes/default/easyui.css">
+<link rel="stylesheet" type="text/css"href="easyui/themes/default/easyui.css">
 <link rel="stylesheet" type="text/css" href="easyui/themes/icon.css">
 <script type="text/javascript" src="easyui/jquery.min.js"></script>
 <script type="text/javascript" src="easyui/jquery.easyui.min.js"></script>
@@ -16,12 +15,12 @@
 		<div data-options="region:'north',split:true" style="height: 225px;float:left;overflow: hidden">
 				<img alt="" src="./images/head.png" style="position: relative;left:10px">
 			<div style="float: right;position: relative;top:20px;right:50px">
-				<font size="5" >您好，</font><font id="username" size="5" color="red">戴柏禹管理员</font>&nbsp;&nbsp;&nbsp;
-				<a href="#"> <font size="5" color="blue">修改密码</font> </a>&nbsp;&nbsp;&nbsp;
-				<a href="#"><font size="5" color="blue">退出登录</font></a>					
+				<font size="5" >您好，</font><font id="username11" size="5" color="red"></font>&nbsp;&nbsp;&nbsp;
+				<a href="#" > <font size="5" color="blue" onclick="xiugai()">修改密码</font> </a>&nbsp;&nbsp;&nbsp;
+				<a href="#"><font size="5" color="blue" onclick="tuichu()">退出登录</font></a>					
 			</div>
 			
-			<div style="width:700px;height:150px;position: relative; top:-200px;left:330px;background-color: #ffffff;" align="center">
+			<div style="width:700px;height:250px;position: relative; top:-200px;left:330px;background-color: #ffffff;line-height:160px;" align="center">
 				<font color="blue" size="7" >湖南硅谷医药管理页面</font>
 			</div>
 			
@@ -61,8 +60,81 @@
 			<h3 align="center">©2009-2018 硅谷医药管理系统。Powered by servlet an RasyUI.</h3>
 		</div>   
 	</div>
+	
+	
+	<!-- 修改密码 -->
+	<form id="manage_edit" style="margin: 0; padding: 5px 0 0 25px; color: #333;">
+	<pre>
+原密码：        <input id="updatePwd1"  class="textbox" type="password" style="width: 150px; height: 22px;"/><br>
+新密码：<input id="updatePwd2" class="textbox" type="password"  style="width: 150px; height: 22px;"/> <br>
+重复新密码：     <input id="updatePwd3" class="textbox" type="password" style="width: 150px; height: 22px;"/> <br>
+	</pre>
+	</form>
 	<script type="text/javascript">
-		$(function(){
+			panduan();
+			function panduan(){
+				$.ajax({
+					Type:"post",
+					url:"panduan_dby",
+					success:function(data){
+						if(data==0){
+							window.location.href="login.html";
+						}else{
+							$("#username11").text(data);
+						}
+					}
+				});
+				
+			}
+			
+			function xiugai(){
+				alert("1");
+				$('#manage_edit').dialog('open');
+				var pwd1=$("#updatePwd3").val();
+				var pwd2=$("#updatePwd2").val();
+				if(pwd1!=pwd2){
+					alert("新密码不一致！");
+				}
+				else{
+				$.ajax({
+					Type:"post",
+					url:"xiugai_dby",
+					data : {
+						userPwd1:$("#updatePwd1").val(),
+						userPwd2:$("#updatePwd2").val(),
+						userPwd3:$("#updatePwd3").val(),
+					},
+					success:function(data){
+						if(data==1){
+							alert("修改成功，请重新登录！");
+							window.location.href="login.html";
+						}else if(data==0){
+							alert("原密码错误！");
+						}
+						}
+					});
+					}
+				}
+			
+			
+			function tuichu(){
+				var b=	confirm("确定退出吗？");
+				if(b){
+					
+				$.ajax({
+					Type:"post",
+					url:"tuichu_dby",
+					success:function(data){
+						if(data==1){
+							window.location.href="login.html";
+						}
+						}
+					});
+				}
+			}
+	
+	
+			$(function(){
 			$("#tt").tree({
 				url : "/wujunfan/trees",
 				lines : true,
