--- a/src/main/resources/static/user1.html
+++ b/src/main/resources/static/user1.html
@@ -45,7 +45,7 @@
 
 	<br>
 	<div style="position: relative;left:10px">
-		<table id="empList"> </table>
+		<table id="empList2"> </table>
 	</div>
 	
 
@@ -89,7 +89,7 @@
 		
 		// 加载datagrid分页数据
 			
-		$("#empList").datagrid({
+		$("#empList2").datagrid({
 			width : 810,
 			height:390,
 			url : dizhi,
