--- a/src/main/resources/static/Druginfoquery.html
+++ b/src/main/resources/static/Druginfoquery.html
@@ -27,9 +27,9 @@
 		},{
 			field : 'drugName',title : '药品名称',width : 100,align : 'center'
 		},{
-			field : 'drugSpecifications',title : '药品规格',width : 100,align : 'center'
+			field : 'supplierName',title : '供应商公司' ,width : 100,align : 'center'
 		},{
-			field : 'supplierName',title : '供应商公司',width : 100,align : 'center'
+			field : 'drugSpecifications',title : '药品规格',width : 100,align : 'center'
 		},{
 			field : 'drugUnit',title : '单位',width : 100,align : 'center'
 		},{
@@ -38,7 +38,9 @@
 			field : 'priceIn',title : '进价',width : 100,align : 'center'
 		},{
 			field : 'priceOut',title : '售价',width : 100,align : 'center'
-		},] ]
+		},{
+			field : 'tishiNum',title : '库存提醒',width : 100,align : 'center'
+		}] ]
 	});
 
 </script>
