--- a/src/main/resources/static/Supplierquery.html
+++ b/src/main/resources/static/Supplierquery.html
@@ -11,9 +11,76 @@
 <script type="text/javascript" src="easyui/locale/easyui-lang-zh_CN.js"></script>
 </head>
 <body>
+<input type="button" value="修改" onclick="user.update()">
 <table id="usergrid"></table>
 <div id="childwin"></div>
+
+<!-- 修改密码 -->
+	<form id="manage_edit"
+		style="margin: 0; padding: 5px 0 0 25px; color: #333;">
+		<pre>
+原密码：        <input id="updatePwd1" class="textbox" type="password"
+				style="width: 150px; height: 22px;" /><br>
+新密码：        <input id="updatePwd2" class="textbox" type="password"
+				style="width: 150px; height: 22px;" /> <br>
+重复新密码：    <input id="updatePwd3" class="textbox" type="password"
+				style="width: 150px; height: 22px;" /> <br>
+	</pre>
+	</form>
 <script type="text/javascript">
+	user={
+		"update":function(){
+			$.messager.progress('close');
+			$('#manage_edit').form('load').dialog('open');
+		}	
+	}
+	
+	
+	$("#manage_edit").dialog({
+		width: 350,
+		title: '修改',
+		modal: true,
+		closed: true,
+		buttons: [{
+			text: '提交',
+			handler: function() {
+				var pwd1=$("#updatePwd3").val();
+				var pwd2=$("#updatePwd2").val();
+				if(pwd1!=pwd2){
+					alert("新密码不一致！");
+				}
+				else{
+				$.ajax({
+					Type:"post",
+					url:"xiugai_dby",
+					data : {
+						userPwd1:$("#updatePwd1").val(),
+						userPwd2:$("#updatePwd2").val(),
+						userPwd3:$("#updatePwd3").val(),
+					},
+					success:function(data){
+						if(data==1){
+							alert("修改成功，请重新登录！");
+							window.location.href="login.html";
+						}else if(data==0){
+							alert("原密码错误！");
+						}
+						}
+					});
+					}
+			},},{
+			text: '取消',
+			handler: function() {
+				$('#manage_edit').dialog('close').form('reset');
+			
+			}
+	}],
+
+	})
+
+
+
+
 	$('#usergrid').datagrid({
 		url : '/wujunfan/supplierquery',
 		fitColumns : true,
