--- a/src/main/resources/static/Druginfoquery.html
+++ b/src/main/resources/static/Druginfoquery.html
@@ -38,7 +38,9 @@
 			field : 'priceIn',title : '进价',width : 100,align : 'center'
 		},{
 			field : 'priceOut',title : '售价',width : 100,align : 'center'
-		},] ]
+		},{
+			field : '',title : '售价',width : 100,align : 'center'
+		}] ]
 	});
 
 </script>
